--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=a80e3b4cc27241cc99eb",
+    "/css/app.css": "/css/app.css?id=a18bcbec68adfba91268"
 }
