--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
+        "nesbot/carbon": "^2.30",
         "overtrue/laravel-lang": "~3.0"
     },
     "require-dev": {
